<resources>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="app_name">我的云音乐</string>
    <string name="home_login">立即登陆</string>
    <string name="home_login_tip">登陆网易云音乐</string>
    <string name="home_login_tip_2">手机电脑多端同步，尽享海量高品质音乐</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login_text_login">登陆</string>
    <string name="login_text_register">注册</string>
    <string name="local_music">本地音乐</string>
    <string name="show_toast">SHOW TOAST</string>
    <string name="add_count">加加</string>
    <string name="login_name">请输入用户名</string>
    <string name="login_secret">请输入密码</string>
    <string name="login_save">记住密码</string>
    <string name="login_agree">已同意《用户协议》和《隐私政策》</string>
    <string name="init_value">00:00</string>
</resources>