<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_red_dark">

    <RelativeLayout
        android:id="@+id/spread"
        android:layout_width="match_parent"
        android:layout_height="300dp">

        <ImageView
            android:layout_centerInParent="true"
            android:id="@+id/login_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@mipmap/ic_launcher"
            android:scaleType="centerCrop">

        </ImageView>

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/login_user_view"
        android:layout_below="@id/spread"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="30dp"
            android:layout_height="40dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="30dp"
            android:src="@mipmap/login_user">
        </ImageView>

        <EditText
            android:id="@+id/login_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="40dp"
            android:layout_marginStart="5dp"
            android:gravity="center"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:hint="@string/login_name"
            android:maxLines="1"
            android:maxLength="10"
            android:background="@drawable/bg_mobile_loggin">
        </EditText>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/login_pwd_view"
        android:layout_below="@id/login_user_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="30dp"
            android:layout_height="40dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="20dp"
            android:src="@mipmap/login_pwd">
        </ImageView>

        <EditText
            android:id="@+id/login_pwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="40dp"
            android:layout_marginStart="5dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:hint="@string/login_secret"
            android:gravity="center"
            android:autofillHints="password"
            android:inputType="textPassword"
            android:background="@drawable/bg_mobile_loggin">
        </EditText>
    </LinearLayout>

    <CheckBox
        android:id="@+id/login_save"
        android:layout_below="@id/login_pwd_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="70dp"
        android:layout_marginTop="5dp"
        android:paddingStart="10dp"
        android:text="@string/login_save"
        android:textColor="@android:color/white"
        android:textSize="14sp"
        android:textStyle="bold"
        android:button="@drawable/bg_checkbox"/>

    <TextView
        android:id="@+id/login_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="110dp"
        android:background="@drawable/bg_mobile_loggin"
        android:gravity="center"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:text="@string/login_text_login"
        android:textColor="@android:color/holo_red_light"
        android:textSize="15sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:text="@string/login_agree"
        android:textColor="@android:color/white"
        android:textSize="11sp" />

</RelativeLayout>