<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".view.ui.home.HomeActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/title_layout"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp">

            <TextView
                android:id="@+id/toggle_view"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:background="@mipmap/category" />

            <TextView
                android:id="@+id/search_view"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:background="@mipmap/b_p" />

            <com.google.android.material.tabs.TabLayout
                android:id="@+id/tab_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="42dp"
                android:layout_marginEnd="42dp"
                android:layout_toStartOf="@id/search_view"
                android:layout_toEndOf="@id/toggle_view"
                app:tabIndicatorHeight="0dp" />

        </RelativeLayout>

        <androidx.viewpager.widget.ViewPager
            android:id="@+id/view_pager"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/bottom_view_music"
            android:layout_below="@+id/title_layout">

        </androidx.viewpager.widget.ViewPager>

        <com.example.lib_audio.mediaplayer.view.BottomMusicView
            android:id="@+id/bottom_view_music"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true">

        </com.example.lib_audio.mediaplayer.view.BottomMusicView>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/left_drawer_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:layout_marginEnd="25dp"
        android:background="@color/white">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="none">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/avatr_view"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_centerInParent="true"
                    android:layout_marginTop="20dp"
                    android:visibility="gone" />

                <LinearLayout
                    android:id="@+id/unlogin_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:gravity="center"
                        android:text="@string/home_login_tip"
                        android:textColor="@color/color_333333"
                        android:textSize="13sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="2dp"
                        android:gravity="center"
                        android:text="@string/home_login_tip_2"
                        android:textColor="@color/color_333333"
                        android:textSize="13sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="20dp"
                        android:background="@drawable/bg_home_login"
                        android:paddingStart="40dp"
                        android:paddingTop="5dp"
                        android:paddingEnd="40dp"
                        android:paddingBottom="5dp"
                        android:text="@string/home_login"
                        android:textColor="@color/color_333333"
                        android:textSize="15sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_below="@+id/unlogin_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <EditText
                        android:id="@+id/two_edi"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:maxLines="1"
                        android:maxLength="10"
                        android:hint="请输入发送数据">
                    </EditText>
                    <Button
                        android:id="@+id/two_but"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="发送">
                    </Button>
                </LinearLayout>

            </RelativeLayout>

        </ScrollView>
    </RelativeLayout>
</androidx.drawerlayout.widget.DrawerLayout>